--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="style.css" />
     <title>Roots: 2</title>
      <!-- Social embed image -->
-     <meta property="og:image" content="https://rootsseries.github.io/2/favicon.png">
+     <meta property="og:image" content="https://rootsseries.github.io/play2/favicon.png">
      <meta property="og:image:type" content="image/png">
      <meta property="og:image:width" content="4096">
      <meta property="og:image:height" content="4096">
